compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_field.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn(a: a) { a.field }"
---
----- SOURCE CODE
fn(a: a) { a.field }

----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:1:13
  │
1 │ fn(a: a) { a.field }
  │             ^^^^^^ This field does not exist

The value being accessed has this type:

    a

It does not have any fields.
